changed the base url to try to fix broken css

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://example.org/"
+baseURL = "https://oceanographer-horse-45458.netlify.com/"
 themeDir = "themes"
 languageCode = "en-us"
 title = "District Zouk"
