--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,7 @@ baseURL = "https://oceanographer-horse-45458.netlify.com/"
 themeDir = "themes"
 languageCode = "en-us"
 title = "District Zouk"
-theme = "landing-page-hugo-master"
+theme = "landing-page-hugo"
 canonifyUrls = "true"
 
 [params]
