--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,5 +1,5 @@
 backend:
-  name: github
+  name: git-gateway
   repo: cryberg/district-zouk
   branch: master
   publish_mode: editorial_workflow
@@ -12,5 +12,7 @@ collections:
     folder: content/post
     create: true
     fields:
-      - {name: title, label: Title}
+      - {name: title, label: Title, widget: string, tagname: h2}
+      - {name: img, label: Image, widget: image}
+      - {name: weight, label: Weight, widget: number}
       - {name: body, label: Body, widget: markdown}
